--- a/examples/bearing_recon/outputs/2023-05-30/17-34-40/.hydra/config.yaml
+++ b/examples/bearing_recon/outputs/2023-05-30/17-34-40/.hydra/config.yaml
@@ -1,40 +1,37 @@
 data:
   _target_: tsa.dataset.TimeSeriesDataset
   batch_size: 16
-  categorical_cols: [ ]
-  index_col: "Date_Time"
-  target_col: [ ]
-  data_path: "examples/forecasting/AirQualityUCI.csv"
+  categorical_cols: []
+  index_col: index
+  target_col: []
+  data_path: ../../data/intermediate/Bearing_Sensor_Data_pt1_ds.csv
   prediction_window: 1
   seq_length: 3
   task:
     _target_: tsa.dataset.Tasks
     value: reconstruction
-
 training:
-  denoising: False
+  denoising: false
   directions: 1
   gradient_accumulation_steps: 1
   hidden_size_encoder: 64
   hidden_size_decoder: 64
-  input_att: True
-  lr: 1e-5
+  input_att: true
+  lr: 1.0e-05
   lrs_step_size: 5000
   max_grad_norm: 0.1
   num_epochs: 100
-  output_size: 13
-  reg1: True
-  reg2: False
-  reg_factor1: 1e-4
-  reg_factor2: 1e-4
+  output_size: 5
+  reg1: true
+  reg2: false
+  reg_factor1: 0.0001
+  reg_factor2: 0.0001
   seq_len: ${data.seq_length}
-  temporal_att: True
-
+  temporal_att: true
 general:
-  do_eval: True
-  do_train: True
+  do_eval: true
+  do_train: true
   logging_steps: 100
-
-  output_dir: "output"
+  output_dir: output
   save_steps: 5000
-  eval_during_training: True
+  eval_during_training: true
