--- a/examples/toy_data_forecast/config.yaml
+++ b/examples/toy_data_forecast/config.yaml
@@ -1,17 +1,18 @@
 data:
   _target_: tsa.dataset.TimeSeriesDataset
-  batch_size: 16
+  batch_size: 4
   categorical_cols: [ ]
-  index_col: "Date_Time"
-  target_col: [ ]
-  data_path: "examples/forecasting/AirQualityUCI.csv"
+  index_col: "index"
+  target_col: [ "B2" ]
+  data_path: "../../data/raw/toy_dataset.csv"
   prediction_window: 1
   seq_length: 3
   task:
     _target_: tsa.dataset.Tasks
-    value: reconstruction
+    value: prediction
 
 training:
+  batch_size: ${data.batch_size}
   denoising: False
   directions: 1
   gradient_accumulation_steps: 1
@@ -21,8 +22,8 @@ training:
   lr: 1e-5
   lrs_step_size: 5000
   max_grad_norm: 0.1
-  num_epochs: 100
-  output_size: 13
+  num_epochs: 10
+  output_size: 1
   reg1: True
   reg2: False
   reg_factor1: 1e-4
