--- a/examples/toy_data_forecast_infer/config.yaml
+++ b/examples/toy_data_forecast_infer/config.yaml
@@ -9,36 +9,7 @@ data:
   seq_length: 3
   task:
     _target_: tsa.dataset.Tasks
-    value: prediction
+    value: inference
 
 model:
-  path: 
-
-training:
-  batch_size: ${data.batch_size}
-  denoising: False
-  directions: 1
-  gradient_accumulation_steps: 1
-  hidden_size_encoder: 2
-  hidden_size_decoder: 2
-  input_att: True
-  lr: 1e-5
-  lrs_step_size: 5000
-  max_grad_norm: 0.1
-  num_epochs: 10
-  output_size: 1
-  reg1: True
-  reg2: False
-  reg_factor1: 1e-4
-  reg_factor2: 1e-4
-  seq_len: ${data.seq_length}
-  temporal_att: True
-
-general:
-  do_eval: True
-  do_train: True
-  logging_steps: 100
-
-  output_dir: "output"
-  save_steps: 5000
-  eval_during_training: True
+  name: predict
